[gd_scene load_steps=11 format=4 uid="uid://b336shrmqmqt6"]

[ext_resource type="Script" uid="uid://3r8kcshxt1re" path="res://menus/main.gd" id="1_7khdk"]
[ext_resource type="Theme" uid="uid://bexh7jwgl5twv" path="res://menus/expedition.tres" id="1_rnu0y"]
[ext_resource type="Texture2D" uid="uid://cjxejh72gqga0" path="res://assets/PNG/White/2x/right.png" id="3_gvix4"]
[ext_resource type="PackedScene" uid="uid://cgrjbi2pejlo0" path="res://levels/01.tscn" id="3_kes4h"]
[ext_resource type="TileSet" uid="uid://j3fhy4qx8t7m" path="res://resources/tile-set.tres" id="4_d7jbi"]
[ext_resource type="Texture2D" uid="uid://dip05evfr6njk" path="res://assets/PNG/White/2x/gear.png" id="4_kes4h"]
[ext_resource type="Texture2D" uid="uid://cnbvk8b72ftr1" path="res://assets/PNG/White/2x/power.png" id="5_d7jbi"]

[sub_resource type="Animation" id="Animation_7khdk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ncfug"]
resource_name = "pulsate"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleLabel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-80, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeakq"]
_data = {
&"RESET": SubResource("Animation_7khdk"),
&"pulsate": SubResource("Animation_ncfug")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rnu0y")
script = ExtResource("1_7khdk")
first_level = ExtResource("3_kes4h")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQALAAYAAAAAAAEAAQAHAAQAAAAAAAIAAQALAAYAAAAAAAMAAQALAAYAAAAAAAQAAQALAAYAAAAAAAUAAQAHAAQAAAAAAAYAAQALAAYAAAAAAAcAAQALAAYAAAAAAAgAAQALAAYAAAAAAAkAAQAKAAYAAAAAAAoAAQAKAAYAAAAAAAsAAQALAAYAAAAAAAwAAQALAAYAAAAAAA0AAQALAAYAAAABAAAAAQALAAYAAAABAAEAAQALAAYAAAABAAIAAQALAAYAAAABAAMAAQALAAYAAAABAAQAAQAIAAQAAAABAAUAAQAIAAQAAAABAAYAAQALAAYAAAABAAcAAQALAAYAAAABAAgAAQALAAYAAAABAAkAAQAKAAYAAAABAAoAAQAKAAYAAAABAAsAAQAKAAYAAAABAAwAAQAKAAYAAAABAA0AAQALAAYAAAACAAAAAQALAAYAAAACAAEAAQALAAYAAAACAAIAAQALAAYAAAACAAMAAQALAAYAAAACAAQAAQALAAYAAAACAAUAAQALAAYAAAACAAYAAQALAAYAAAACAAcAAQALAAYAAAACAAgAAQAKAAYAAAACAAkAAQAKAAYAAAACAAoAAQALAAYAAAACAAsAAQALAAYAAAACAAwAAQALAAYAAAACAA0AAQALAAYAAAADAAAAAQALAAYAAAADAAEAAQALAAYAAAADAAIAAQALAAYAAAADAAMAAQALAAYAAAADAAQAAQALAAYAAAADAAUAAQALAAYAAAADAAYAAQALAAYAAAADAAcAAQALAAYAAAADAAgAAQALAAYAAAADAAkAAQALAAYAAAADAAoAAQALAAYAAAADAAsAAQALAAYAAAADAAwAAQALAAYAAAADAA0AAQALAAYAAAAEAAAAAQALAAYAAAAEAAEAAQALAAYAAAAEAAIAAQALAAYAAAAEAAMAAQALAAYAAAAEAAQAAQALAAYAAAAEAAUAAQALAAYAAAAEAAYAAQALAAYAAAAEAAcAAQALAAYAAAAEAAgAAQALAAYAAAAEAAkAAQALAAYAAAAEAAoAAQALAAYAAAAEAAsAAQALAAYAAAAEAAwAAQALAAYAAAAEAA0AAQALAAYAAAAFAAAAAQALAAYAAAAFAAEAAQALAAYAAAAFAAIAAQALAAYAAAAFAAMAAQALAAYAAAAFAAQAAQALAAYAAAAFAAUAAQALAAYAAAAFAAYAAQALAAYAAAAFAAcAAQALAAYAAAAFAAgAAQALAAYAAAAFAAkAAQALAAYAAAAFAAoAAQALAAYAAAAFAAsAAQALAAYAAAAFAAwAAQALAAYAAAAFAA0AAQALAAYAAAAGAAAAAQALAAYAAAAGAAEAAQALAAYAAAAGAAIAAQALAAYAAAAGAAMAAQALAAYAAAAGAAQAAQALAAYAAAAGAAUAAQALAAYAAAAGAAYAAQALAAYAAAAGAAcAAQALAAYAAAAGAAgAAQALAAYAAAAGAAkAAQALAAYAAAAGAAoAAQALAAYAAAAGAAsAAQALAAYAAAAGAAwAAQALAAYAAAAGAA0AAQALAAYAAAAHAAAAAQALAAYAAAAHAAEAAQALAAYAAAAHAAIAAQALAAYAAAAHAAMAAQALAAYAAAAHAAQAAQALAAYAAAAHAAUAAQALAAYAAAAHAAYAAQALAAYAAAAHAAcAAQALAAYAAAAHAAgAAQALAAYAAAAHAAkAAQALAAYAAAAHAAoAAQALAAYAAAAHAAsAAQALAAYAAAAHAAwAAQALAAYAAAAHAA0AAQALAAYAAAAIAAAAAQAMAAYAAAAIAAEAAQALAAYAAAAIAAIAAQALAAYAAAAIAAMAAQALAAYAAAAIAAQAAQALAAYAAAAIAAUAAQALAAYAAAAIAAYAAQALAAYAAAAIAAcAAQALAAYAAAAIAAgAAQALAAYAAAAIAAkAAQALAAYAAAAIAAoAAQALAAYAAAAIAAsAAQALAAYAAAAIAAwAAQALAAYAAAAIAA0AAQALAAYAAAAJAAAAAQAMAAYAAAAJAAEAAQALAAYAAAAJAAIAAQALAAYAAAAJAAMAAQALAAYAAAAJAAQAAQALAAYAAAAJAAUAAQALAAYAAAAJAAYAAQALAAYAAAAJAAcAAQALAAYAAAAJAAgAAQALAAYAAAAJAAkAAQALAAYAAAAJAAoAAQALAAYAAAAJAAsAAQALAAYAAAAJAAwAAQALAAYAAAAJAA0AAQALAAYAAAAKAAAAAQAMAAYAAAAKAAEAAQALAAYAAAAKAAIAAQALAAYAAAAKAAMAAQALAAYAAAAKAAQAAQALAAYAAAAKAAUAAQALAAYAAAAKAAYAAQALAAYAAAAKAAcAAQALAAYAAAAKAAgAAQALAAYAAAAKAAkAAQALAAYAAAAKAAoAAQALAAYAAAAKAAsAAQALAAYAAAAKAAwAAQALAAYAAAAKAA0AAQALAAYAAAALAAAAAQAMAAYAAAALAAEAAQAMAAYAAAALAAIAAQALAAYAAAALAAMAAQALAAYAAAALAAQAAQALAAYAAAALAAUAAQALAAYAAAALAAYAAQALAAYAAAALAAcAAQALAAYAAAALAAgAAQALAAYAAAALAAkAAQALAAYAAAALAAoAAQALAAYAAAALAAsAAQALAAYAAAALAAwAAQALAAYAAAALAA0AAQALAAYAAAAMAAAAAQALAAYAAAAMAAEAAQAMAAYAAAAMAAIAAQALAAYAAAAMAAMAAQALAAYAAAAMAAQAAQALAAYAAAAMAAUAAQALAAYAAAAMAAYAAQALAAYAAAAMAAcAAQALAAYAAAAMAAgAAQALAAYAAAAMAAkAAQALAAYAAAAMAAoAAQALAAYAAAAMAAsAAQALAAYAAAAMAAwAAQALAAYAAAAMAA0AAQALAAYAAAANAAAAAQALAAYAAAANAAEAAQALAAYAAAANAAIAAQALAAYAAAANAAMAAQALAAYAAAANAAQAAQALAAYAAAANAAUAAQALAAYAAAANAAYAAQALAAYAAAANAAcAAQALAAYAAAANAAgAAQALAAYAAAANAAkAAQALAAYAAAANAAoAAQALAAYAAAANAAsAAQAMAAYAAAANAAwAAQAMAAYAAAANAA0AAQALAAYAAAAOAAAAAQALAAYAAAAOAAEAAQALAAYAAAAOAAIAAQALAAYAAAAOAAMAAQALAAYAAAAOAAQAAQALAAYAAAAOAAUAAQALAAYAAAAOAAYAAQALAAYAAAAOAAcAAQALAAYAAAAOAAgAAQALAAYAAAAOAAkAAQALAAYAAAAOAAoAAQAMAAYAAAAOAAsAAQAMAAYAAAAOAAwAAQALAAYAAAAOAA0AAQALAAYAAAAPAAAAAQALAAYAAAAPAAEAAQALAAYAAAAPAAIAAQALAAYAAAAPAAMAAQALAAYAAAAPAAQAAQALAAYAAAAPAAUAAQALAAYAAAAPAAYAAQALAAYAAAAPAAcAAQALAAYAAAAPAAgAAQALAAYAAAAPAAkAAQAHAAQAAAAPAAoAAQAMAAYAAAAPAAsAAQALAAYAAAAPAAwAAQALAAYAAAAPAA0AAQALAAYAAAAQAAAAAQALAAYAAAAQAAEAAQAIAAQAAAAQAAIAAQALAAYAAAAQAAMAAQALAAYAAAAQAAQAAQALAAYAAAAQAAUAAQALAAYAAAAQAAYAAQALAAYAAAAQAAcAAQAIAAQAAAAQAAgAAQAHAAQAAAAQAAkAAQALAAYAAAAQAAoAAQALAAYAAAAQAAsAAQALAAYAAAAQAAwAAQALAAYAAAAQAA0AAQALAAYAAAA=")
tile_set = ExtResource("4_d7jbi")

[node name="TitleMargin" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 85.0
offset_right = 1100.0
offset_bottom = 385.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleMargin"]
root_node = NodePath("../TitleContainer")
libraries = {
&"": SubResource("AnimationLibrary_qeakq")
}

[node name="TitleContainer" type="Control" parent="TitleMargin"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TitleMargin/TitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 295.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 106
text = "Perry's Powered
Power-Ups!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(480, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 475.0
offset_right = 240.0
offset_bottom = 807.0
grow_horizontal = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="ButtonsMargin"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Play" type="Button" parent="ButtonsMargin/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_rnu0y")
theme_override_font_sizes/font_size = 64
text = "Play"
icon = ExtResource("3_gvix4")

[node name="Settings" type="Button" parent="ButtonsMargin/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_rnu0y")
theme_override_font_sizes/font_size = 64
text = "Settings"
icon = ExtResource("4_kes4h")

[node name="Exit" type="Button" parent="ButtonsMargin/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_rnu0y")
theme_override_font_sizes/font_size = 64
text = "Exit"
icon = ExtResource("5_d7jbi")

[connection signal="pressed" from="ButtonsMargin/ButtonsContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonsMargin/ButtonsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonsMargin/ButtonsContainer/Exit" to="." method="_on_exit_pressed"]
